# Breakpoint

./: .gitignore  README.md  main.py  pyproject.toml
Documents/: Database_Schema.md  Demo_script.md  Design_System.md  Development_guide.md  Overview.md  Prompts.md  api_Contract.md
Frontend/: package.json
Frontend/src/: App.jsx
Frontend/src/components/layout/: PageShell.jsx
Frontend/src/pages/: Auth.jsx  Dashboard.jsx  Landing.css  Landing.jsx  Setup.jsx
Frontend/src/store/: sessionStore.js
backend/: Aptfile  Procfile  api_details.md  progress.md  pyproject.toml  render-build.sh  requirements.txt  run.py  tester.py  toxicity_model.pkl
backend/app/: __init__.py  engine.py  models.py  prompts.json  routes.py  utils.py
backend/app/templates/: report_template.html
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: PageShell.jsx
frontend/src/lib/: api.js  supabase.js
frontend/src/pages/: Auth.css  Auth.jsx  Dashboard.jsx  Interview.jsx  Landing.css  Landing.jsx  Report.jsx  Setup.jsx
frontend/src/store/: sessionStore.js
sentinel/: index.html
sentinel/src/: index.css
sentinel/src/lib/: api.js  mood.js  supabase.js
sentinel/src/pages/: Auth.css  Dashboard.jsx  Interview.jsx  Report.jsx
