[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "google-genai>=2.11.0",
    "groq>=1.5.0",
    "joblib>=1.5.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.14",
    "weasyprint>=69.0",
]
